# image_editor-c-

./: CMakeLists.txt  image_processor.cpp  readme.md
bmp/: bmp_reader.cpp  bmp_reader.h  bmp_writer.cpp  bmp_writer.h
filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  filter_factory.cpp  filter_factory.h  gaussian_blur.cpp  gaussian_blur.h  glass_distortion.cpp  glass_distortion.h  grayscale.cpp  grayscale.h  matrix_filter.cpp  matrix_filter.h  negative.cpp  sharpening.cpp  sharpening.h
image/: color.h  image.cpp  image.h
parser/: parser.cpp  parser.h
pipeline/: pipeline.cpp  pipeline.h
